--- a/conf/application.conf
+++ b/conf/application.conf
@@ -3,7 +3,9 @@ play.application.loader=CustomApplicationLoader
 
 oauth {
   facebook {
-    apiUrl = "https://www.facebook.com"
+    host = "https://www.facebook.com"
+    graphHost = "https://graph.facebook.com"
+    graphVersion = "v2.10"
     apiId = "1452280081474172"
     authUri = "/v2.10/dialog/oauth"
     authTokenUri = "/v2.10/oauth/access_token"
